# the-loop

./: .coverage  ANALYTICS.md  CLAUDE.md  CONSTITUTION.md  PR81_GIT_HISTORY_ANALYSIS.md  README.md  SPEC_009_CLOSURE.md  SPEC_ROADMAP_013_015.md  THELOOP.md  THELOOP_RULES_v0.2.0.md  VALIDATION_PLAN_SPEC019.md  firestore.rules  run_prod_migrations.sh
apps/api/: .gitignore  .trivyignore  Dockerfile  README.md  SPEC_013_TEST_REPORT.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  run_migrations.py  sonar-project.properties
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_incidents_table.py  002_add_operational_timestamps.py  003_add_jsonb_fields.py  004_add_incident_timeline_events.py  005_add_incident_responders_actions.py  006_add_incident_attachments.py  007_create_rule_versions.py  008_create_postmortems_table.py  009_add_analytics_indexes.py  010_create_users.py  011_add_is_admin_to_users.py  012_create_api_keys_scans_and_findings.py  013_create_rule_whitelists.py  014_seed_rule_versions_v030.py  015_fix_rule_versions_v030_full_rules.py  016_add_java_rules.py  017_add_csharp_rules.py  018_add_php_rules.py  019_add_ruby_rules.py  020_add_kotlin_rules.py  021_add_rust_rules.py  022_add_cpp_rules.py  023_add_release_tables.py  _MIGRATION_TEMPLATE.txt
apps/api/scripts/: backfill_started_at.py  seed.py  seed_phase_b.py  test-spec-013.sh
apps/api/src/: config.py  main.py
apps/api/src/api/: deps.py  middleware.py
apps/api/src/domain/: exceptions.py  models.py  services.py  services.py.bak
apps/api/tests/: conftest.py
(+502 files in other folders)
